--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
@@ -5,7 +5,7 @@
     swiper-click="toggleLeftCheckbox(task, toggleCompleteTask)" icon-checkbox="task.uuid">
   </div>
 
-  <a href class="group-mixed--middle" swiper-click="callAndWaitThenScroll(openTaskEditor, task)">
+  <a href ng-class="onboardingInProgress && 'link-disable'" class="group-mixed--middle" swiper-click="callAndWaitThenScroll(openTaskEditor, task)">
     <span class="text-link" clamp=2 ng-bind="task.title"></span>
   </a>
 </div>
