--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
@@ -13,7 +13,7 @@ editable-field-container-clicked-elsewhere="clickedElsewhere()">
     </textarea>
   </div>
   <div class="group-mixed--right">
-    <a href class="link-navigation" editable-field-deactivate ng-click="openTaskEditor(newItem)">
+    <a href ng-hide="onboardingInProgress" class="link-navigation" editable-field-deactivate ng-click="openTaskEditor(newItem)">
       <span class="text-navigation-forward"></span>
     </a>
   </div>
