--- a/frontend/core/src/main/webapp/static/app/lists/listsSlides.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsSlides.html
@@ -1,5 +1,5 @@
 <div ng-show="isFeatureActive('lists')" class="swiper-container container-fluid--inner"
-swiper-container="lists" swiper-type="main" expected-slides=2>
+swiper-container="lists" swiper-type="main" expected-slides=2 ng-class="onboardingInProgress && 'swiper-no-swiping'">
   <div class="swiper-wrapper">
     <div class="swiper-slide" swiper-slide="lists/active" slide-index=0
     ng-include="'static/app/lists/listsActive.html'"></div>
