--- a/frontend/core/src/main/webapp/static/app/main/toolbar.html
+++ b/frontend/core/src/main/webapp/static/app/main/toolbar.html
@@ -1,14 +1,14 @@
 <div class="container-toolbar--inner" ng-controller="ToolbarController">
   <div ng-hide="isCustomToolbar()" class="swiper-no-swiping group-symmetrical height-large">
-    <button class="group-symmetrical--left btn" type="button" ng-click="toggleMenu()" alt="menu">
+    <button ng-disabled="!isOnboarded('tasks') && checkListOnboardingLock('tasks', undefined)" class="group-symmetrical--left btn" type="button" ng-click="toggleMenu()" alt="menu">
       <span class="text-menu"></span>
     </button>
     <div class="group-symmetrical--middle" ng-style="{maxWidth: calculateHeadingWidth()}">
-      <a href ng-click="clickToolbarHeading()">
+      <a href ng-class="onboardingInProgress && 'link-disable'" ng-click="clickToolbarHeading()">
         <div><span class="text-heading-primary" clamp=2 ng-bind="getCurrentHeading()"></span></div>
       </a>
     </div>
-    <button class="group-symmetrical--right btn" ng-click="openEditor('omnibar')">
+    <button ng-disabled="onboardingInProgress" class="group-symmetrical--right btn" ng-click="openEditor('omnibar')">
       <span class="text-logo"></span>
     </button>
   </div>
