--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -5,13 +5,13 @@
         <a href class="group-symmetrical--left link-navigation highlighted active" ng-click="endNoteEdit()" >
           <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-bind="titlebarHasText() && !note.deleted ? 'save' : 'back'"></span>
         </a>
-        <div ng-if="mode === 'fullScreen'" class="group-symmetrical--middle width-large">
+        <div ng-hide="onboardingInProgress" ng-if="mode === 'fullScreen'" class="group-symmetrical--middle width-large">
           <a href ng-class="link-navigation" ng-click="toggleNoteEditMode()">
             <span class="text-navigation downplayed">note settings</span>
           </a>
         </div>
-        <a ng-if="!note.deleted" class="group-symmetrical--right" href ng-click="deleteNoteInEdit()"><span class="text-trash"></span></a>
-        <a ng-if="note.deleted" class="group-symmetrical--right link-navigation highlighted active" href ng-click="undeleteNote(note)"><span class="text-navigation">restore</span></a>
+        <a ng-if="!note.deleted && !onboardingInProgress" class="group-symmetrical--right" href ng-click="deleteNoteInEdit()"><span class="text-trash"></span></a>
+        <a ng-if="note.deleted && !onboardingInProgress" class="group-symmetrical--right link-navigation highlighted active" href ng-click="undeleteNote(note)"><span class="text-navigation">restore</span></a>
       </div>
 
       <form ng-hide="hideNoteTitle && isOnboarded('notes')" role="form" class="group-mixed" autocapitalize="none" autocorrect="off">
@@ -31,12 +31,12 @@
   </header>
 
   <div class="swiper-container container-fluid--inner" swiper-container="noteEditor" swiper-type="main" expected-slides="2" swiper-container-slide-changed="editorSwiperSlideChanged()">
-    <div class="swiper-wrapper">
+    <div class="swiper-wrapper" ng-class="onboardingInProgress && 'swiper-no-swiping'">
       <div class="swiper-slide" swiper-slide="noteEditor/basic" slide-index="0">
         <div ng-style="{'padding-bottom': mode === 'fullScreen' ? 0 : EDITOR_FOOTER_HEIGHT}" class="container-content" drawer-override-aisle="right">
 
           <!-- LIST PICKER -->
-          <div ng-if="listPickerOpen" class="swiper-no-swiping animate-fade-in" editable-field-container="auto" editable-field-container-scrollable="true" editable-field-container-clicked-elsewhere="closeListPicker()" data-snap-ignore="true">
+          <div ng-if="listPickerOpen" ng-hide="onboardingInProgress" class="swiper-no-swiping animate-fade-in" editable-field-container="auto" editable-field-container-scrollable="true" editable-field-container-clicked-elsewhere="closeListPicker()" data-snap-ignore="true">
             <div list-picker="lists" list-picker-new-item="{}" list-picker-archived-lists="archivedLists" list-picker-save="closeListPickerAndSetListToItem(note, list)" list-picker-clear="closeListPickerAndClearListFromItem(note, list)" list-picker-get-selected="getListFromUUID(note.transientProperties.list)"></div>
           </div>
 
@@ -60,7 +60,7 @@
 
         <footer ng-hide="mode === 'fullScreen'" class="container-content--after editor-footer">
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
-            <a href ng-click="clickFavorite()" class="group-symmetrical--left">
+            <a href ng-hide="onboardingInProgress" ng-click="clickFavorite()" class="group-symmetrical--left">
               <span class="text-star" ng-class="!note.transientProperties.favorited && 'inactive'"></span>
             </a>
             <a href ng-click="swipeToAdvanced()" ng-hide="isFooterNavigationHidden()" class="group-symmetrical--right link-navigation">
