--- a/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
@@ -1,6 +1,6 @@
 <div ng-show="isFeatureActive('tasks')" class="swiper-container container-fluid--inner"
-swiper-container="tasks" swiper-type="main" expected-slides= 3>
-  <div class="swiper-wrapper">
+swiper-container="tasks" swiper-type="main" expected-slides=3>
+  <div class="swiper-wrapper" ng-class="onboardingInProgress && 'swiper-no-swiping'">
     <div class="swiper-slide" swiper-slide="tasks/recent" slide-index=0
     ng-include="'static/app/tasks/tasksRecent.html'"></div>
     <div class="swiper-slide" swiper-slide="tasks/contexts" slide-index=1
