--- a/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
@@ -1,10 +1,27 @@
 <div ng-if="isFeatureActive('focus')" class="container-content--outer" list-container>
-  <section class="container-content" list="allNotes | itemsFilter:{name:'favorited'}" list-order="top" list-open="openEditor('note', {transientProperties: {favorited:true, itemType: 'note'}})" swiper-prevent>
+  <section ng-if="isOnboarded('focusNotes')" class="container-content" list="allNotes | itemsFilter:{name:'favorited'}" list-order="top" list-open="openEditor('note', {transientProperties: {favorited:true, itemType: 'note'}})" swiper-prevent>
     <h2 class="group-heading justified row">favorite</h2>
     <div class="animate-list-item-leave tall"
     ng-repeat="note in getList() | orderBy:'favorited':true | limitTo: currentListLimitTo"
     list-item="getList().length" ng-include="'static/app/notes/noteListItem.html'"></div>
     <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
   </section>
-  <footer class="container-content--after" list-footer="getFeatureMap('focus')"></footer>
+  <footer ng-if="isOnboarded('focusNotes')" class="container-content--after" list-footer="getFeatureMap('focus')"></footer>
+  <section ng-if="!isOnboarded('focusNotes')" class="container-content">
+    <div class="group-instruction">
+      <h2 class="group-heading instruction row">what notes are
+        <span class="highlighted">in use</span>?
+      </h2>
+      <div class="textgroup-ingress row">on this focus view you can see your
+        <span class="text-highlighted">favorite</span> notes
+      </div>
+      <div class="textgroup-ingress last row">add favorite notes here or by clicking star in a note editor</div>
+    </div>
+  </section>
+  <footer ng-if="!isOnboarded('focusNotes')" class="container-content--after group-btn">
+    <button type="submit" class="btn-action" ng-click="completeOnboarding('focusNotes')">
+      <span class="text-btn">got it</span>
+    </button>
+  </footer>
+
 </div>
