--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -1,5 +1,5 @@
 <div class="container-fluid--inner" list-container drawer-handle="left">
-  <section class="container-content" list="items" list-order="top">
+  <section ng-if="isOnboarded('inbox')" class="container-content" list="items" list-order="top">
     <h2 class="group-heading justified row" ng-bind="items.length + ' items'"></h2>
 
     <div list-item-add="{transientProperties: {itemType: 'item'}}" list-item-add-save="saveItem(newItem)">
@@ -28,5 +28,23 @@
     </div>
     <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
   </section>
-  <footer class="container-content--after" list-footer="getFeatureMap('inbox')"></footer>
+  <footer ng-if="isOnboarded('inbox')" class="container-content--after" list-footer="getFeatureMap('inbox')"></footer>
+
+
+  <section ng-if="!isOnboarded('inbox')" class="container-content">
+    <div class="group-instruction">
+      <h2 class="group-heading instruction row">never lose an
+        <span class="highlighted">idea</span>
+      </h2>
+      <div class="textgroup-ingress row">use the inbox to
+        <span class="text-highlighted">quickly</span> store ideas and tasks as they pop into your head
+      </div>
+      <div class="textgroup-ingress last row">add items by hitting the logo that's always in the top-right corner</div>
+    </div>
+  </section>
+  <footer ng-if="!isOnboarded('inbox')" class="container-content--after group-btn">
+    <button type="submit" class="btn-action" ng-click="completeOnboarding('inbox')">
+      <span class="text-btn">got it</span>
+    </button>
+  </footer>
 </div>
