--- a/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
@@ -23,7 +23,7 @@
       <div class="textgroup-ingress row">add a <span class="text-highlighted">task</span> by clicking the plus sign below</div>
     </div>
     <div ng-if="!isOnboarded('tasks') && checkListOnboardingLock('tasks', 'off')" class="group-instruction">
-      <h2 class="group-heading instruction row">first
+      <h2 class="group-heading instruction row"><span ng-if="isOneOnboardingItemCreated('tasks')">first</span>
         <span class="highlighted">task</span> created!
       </h2>
       <div class="textgroup-ingress row">you can now go to <span class="highlighted">notes</span> by clicking
