Removed vibration on note favorite/unfavorite. It makes no sense

--- a/frontend/core/src/main/webapp/static/app/user/userDetails.html
+++ b/frontend/core/src/main/webapp/static/app/user/userDetails.html
@@ -58,7 +58,7 @@
         icon-checkbox="'disableVibration'" ng-click="settingsCheckboxClicked('disableVibration')" />
       </div>
       <div class="group-mixed--middle">
-        <span class="text-link">disable vibration on starring and completing</span>
+        <span class="text-link">disable vibration on complete and uncomplete</span>
       </div>
     </div>
   </section>
