--- a/frontend/core/src/main/webapp/static/app/lists/listListItem.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItem.html
@@ -4,7 +4,7 @@
       <span class="text-navigation-back large"></span>
     </a>
   </div>
-  <a href ng-class="onboardingInProgress && 'link-disable'" class="group-mixed--middle" swiper-click="changeFeature('list', list, true)">
+  <a href ng-class="onboardingInProgress && 'link-disable'" class="group-mixed--middle link-list-item" swiper-click="changeFeature('list', list, true)">
     <span class="text-link" clamp=2 ng-bind="list.title"></span>
   </a>
 </div>
