--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -22,7 +22,7 @@
 
     <div class="animate-list-item-leave row-padded" ng-repeat="item in getList() | orderBy:'created':true | limitTo: currentListLimitTo"
     list-item="getList().length">
-      <a href swiper-click="openEditor('item', item)">
+      <a href class="link-list-item" swiper-click="openEditor('item', item)">
         <span class="text-link" clamp=2 ng-bind="item.title"></span>
       </a>
     </div>
