--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
@@ -22,7 +22,7 @@
     ng-repeat="context in getList() | orderBy:'created':true | limitTo: currentListLimitTo"
     list-item="getList().length">
       <div class="group-mixed">
-        <a href class="group-mixed--middle" swiper-click="swipeToContext(context)">
+        <a href class="group-mixed--middle link-list-item" swiper-click="swipeToContext(context)">
           <span class="text-link" clamp=2 ng-bind="'@' + context.title"></span>
         </a>
         <div class="group-mixed--right">
