Added class height-small to use when height of the viewport is 500px or smaller

--- a/frontend/core/src/main/webapp/static/app/root/root.html
+++ b/frontend/core/src/main/webapp/static/app/root/root.html
@@ -1,1 +1,2 @@
-<div class="container-root" ng-view editable-field-backdrop></div>
+<div class="container-root" ng-view editable-field-backdrop ng-class="currentHeight <= 500 && 'height-small'">
+</div>
