Changed clicking later expanding to toggle instead of open as a failsafe if opening via touchstart fails on older iPhones

--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -65,7 +65,7 @@
         editor-footer-listen-middle-click>
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
             <div class="group-symmetrical--middle">
-              <a href id="editorFooterMiddleLink" ng-if="task.transientProperties.date" ng-click="openExpand()">
+              <a href id="editorFooterMiddleLink" ng-if="task.transientProperties.date" ng-click="toggleExpand()">
                 <span id="editorFooterMiddleIcon" class="text-calendar"></span>
               </a>
             </div>
