--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -25,9 +25,11 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide" swiper-slide="listEditor/basic" slide-index="0">
         <div ng-style="{'padding-bottom': EDITOR_FOOTER_HEIGHT}" class="container-content" drawer-override-aisle="right">
-          <textarea class="row" ng-model="list.transientProperties.description" msd-elastic placeholder="enter description&#8230;" maxlength="1024"></textarea>
+          <div class="row-form" editable-field-container>
+            <textarea ng-model="list.description" msd-elastic placeholder="enter description&#8230;" ng-focus="setDescriptionFocus(true)" ng-blur="setDescriptionFocus(false)" maxlength="1024" editable-field></textarea>
+          </div>
         </div>
-        <footer class="container-content--after editor-footer">
+        <footer ng-hide="descriptionFocused" class="container-content--after editor-footer">
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
             <a href ng-click="clickFavorite()" class="group-symmetrical--left">
               <span class="text-star" ng-class="!isFavoriteList(list) && 'inactive'"></span>
