--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -61,7 +61,7 @@
 
         </div>
 
-        <footer class="container-content--after editor-footer" editor-footer="basicSlideInfo"
+        <footer ng-hide="descriptionFocused" class="container-content--after editor-footer" editor-footer="basicSlideInfo"
         editor-footer-listen-middle-click>
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
             <div class="group-symmetrical--middle">
